change menuItem parent to grid container

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,6 @@
 }
 
 body {
-    box-sizing: border-box;
-    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -23,13 +21,16 @@ p {
 }
 
 body {
+    box-sizing: border-box;
+    margin: 0;
     font-family: "Montserrat", sans-serif;
 }
 
- ::-webkit-scrollbar {
+
+/* ::-webkit-scrollbar {
     height: 5px;
     display: none;
-}
+} */
 
 
 /* Track */
